[UPD] scenes are now headers only [ADD] physics scene [ADD] physics scene glb [ADD] possibility to set only depth buffer [ADD] IsArray added to resource [ADD] passing format to texture on creation [UPD] single textures array instead of separate arrays [ADD] material attributes with texture ids and some default material values [ADD] collision meshes debug rendering [ADD][WIP] GJK collision [ADD] editor control system [UPD] WArray now returns index on Add [ADD] geometry utils

--- a/Sandbox/Sandbox.vcxproj
+++ b/Sandbox/Sandbox.vcxproj
@@ -172,10 +172,10 @@ xcopy /E /I /Y "$(SolutionDir)$(ProjectName)\Content\*" "../bin/Dist/Sandbox\Con
   <ItemGroup>
     <ClInclude Include="src\SandboxApp.h" />
     <ClInclude Include="src\Scenes\DefaultScene.h" />
+    <ClInclude Include="src\Scenes\PhysicsTestScene.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\SandboxApp.cpp" />
-    <ClCompile Include="src\Scenes\DefaultScene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Waldem\Waldem.vcxproj">
