--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -50,6 +50,10 @@ Size=573,219
 Pos=1660,111
 Size=229,937
 
+[Window][Light]
+Pos=60,60
+Size=452,166
+
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
