[ADD] widgets system improved [ADD] fixed hierarchy and details widgets [UPD] light default values [ADD] log

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -39,24 +39,32 @@ Pos=659,132
 Size=579,285
 
 [Window][Transform]
-Pos=1141,61
-Size=365,122
+Pos=1716,120
+Size=174,212
 
 [Window][Ocean]
 Pos=1346,149
 Size=573,219
 
 [Window][Entities]
-Pos=1691,21
-Size=229,937
+Pos=0,19
+Size=300,1080
 
 [Window][Light]
-Pos=60,60
+Pos=1085,242
 Size=457,281
 
 [Window][Bloom]
 Pos=31,65
 Size=1337,121
+
+[Window][Details]
+Pos=1620,19
+Size=300,1080
+
+[Window][Main Content]
+Pos=431,161
+Size=868,669
 
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
