--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,13 @@
 *.userosscache
 *.sln.docstates
 
+# Project files
+*.sln
+*.sln.DotSettings
+*.vcxproj
+*.vcxproj.filters
+
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
