--- a/ScriptEngine/ScriptEngine.csproj
+++ b/ScriptEngine/ScriptEngine.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CSharpTesting.cs" />
+    <Compile Include="obj\Debug\.NETFramework,Version=v4.7.2.AssemblyAttributes.cs" />
   </ItemGroup>
   <ItemGroup>
   </ItemGroup>
