[UPD] all systems are working in a way [ADD] AudioSource component [ADD] Vector3 is now recognizable by flecs [UPD] few more refactoring

--- a/WaldemEngine/imgui.ini
+++ b/WaldemEngine/imgui.ini
@@ -10,19 +10,19 @@ Collapsed=0
 
 [Window][Entities]
 Pos=0,17
-Size=383,1063
+Size=180,1063
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Content]
-Pos=385,810
-Size=1149,270
+Pos=182,810
+Size=1510,270
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Details]
-Pos=1536,17
-Size=384,1063
+Pos=1694,17
+Size=226,1063
 Collapsed=0
 DockId=0x00000004,0
 
@@ -37,19 +37,29 @@ Size=394,421
 Collapsed=0
 
 [Window][Viewport]
-Pos=385,17
-Size=1149,791
+Pos=182,17
+Size=1510,791
 Collapsed=0
 DockId=0x00000005,0
 
 [Table][0x8759DA7C,2]
+Column 0  Weight=41.3245
+Column 1  Weight=218.6755
+
+[Table][0x65F48D5C,2]
+Column 0  Weight=139.5973
+Column 1  Weight=120.4027
+
+[Table][0x631D4F76,2]
+Column 0  Weight=144.4445
+Column 1  Weight=115.5556
 
 [Docking][Data]
 DockSpace       ID=0xC6648C19 Window=0xE5A44030 Pos=100,117 Size=1920,1063 Split=X
-  DockNode      ID=0x00000001 Parent=0xC6648C19 SizeRef=383,1080 Selected=0x66870828
-  DockNode      ID=0x00000002 Parent=0xC6648C19 SizeRef=1535,1080 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=1149,1080 Split=Y
-      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=1149,808 CentralNode=1 Selected=0xC450F867
-      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=1149,270 Selected=0xE24ED91D
-    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=384,1080 Selected=0x893C342E
+  DockNode      ID=0x00000003 Parent=0xC6648C19 SizeRef=1692,1063 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=180,1063 Selected=0x66870828
+    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1738,1063 Split=Y
+      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=1307,791 CentralNode=1 Selected=0xC450F867
+      DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=1307,270 Selected=0xE24ED91D
+  DockNode      ID=0x00000004 Parent=0xC6648C19 SizeRef=226,1063 Selected=0x893C342E
 
