--- a/WaldemEngine/imgui.ini
+++ b/WaldemEngine/imgui.ini
@@ -10,19 +10,19 @@ Collapsed=0
 
 [Window][Entities]
 Pos=0,17
-Size=180,1063
+Size=383,1063
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Content]
-Pos=182,810
-Size=1510,270
+Pos=385,810
+Size=1149,270
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Details]
-Pos=1694,17
-Size=226,1063
+Pos=1536,17
+Size=384,1063
 Collapsed=0
 DockId=0x00000004,0
 
@@ -37,8 +37,8 @@ Size=394,421
 Collapsed=0
 
 [Window][Viewport]
-Pos=182,17
-Size=1510,791
+Pos=385,17
+Size=1149,791
 Collapsed=0
 DockId=0x00000005,0
 
@@ -56,10 +56,10 @@ Column 1  Weight=115.5556
 
 [Docking][Data]
 DockSpace       ID=0xC6648C19 Window=0xE5A44030 Pos=100,117 Size=1920,1063 Split=X
-  DockNode      ID=0x00000003 Parent=0xC6648C19 SizeRef=1692,1063 Split=X
-    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=180,1063 Selected=0x66870828
-    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1738,1063 Split=Y
-      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=1307,791 CentralNode=1 Selected=0xC450F867
-      DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=1307,270 Selected=0xE24ED91D
-  DockNode      ID=0x00000004 Parent=0xC6648C19 SizeRef=226,1063 Selected=0x893C342E
+  DockNode      ID=0x00000001 Parent=0xC6648C19 SizeRef=383,1080 Selected=0x66870828
+  DockNode      ID=0x00000002 Parent=0xC6648C19 SizeRef=1535,1080 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=1149,1080 Split=Y
+      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=1149,808 CentralNode=1 Selected=0xC450F867
+      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=1149,270 Selected=0xE24ED91D
+    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=384,1080 Selected=0x893C342E
 
